add CSS to form section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Rainbow ToDo's</title>
 </head>
 
@@ -20,7 +21,7 @@
         <form>
             <input type="text" id="todo-input" placeholder="Add a ToDo" required>
             <button id="todo-btn" type="submit">
-                <!-- image -->
+                <img src="assets/images/add.png">
             </button>
         </form>
     </section>
@@ -43,6 +44,7 @@
             <li>Github</li>
         </ul>
         <p>Designed by Noemi Chis 2023</p>
+        <p>Icons created by Freepik - Flaticon</p>
     </footer>
 
 </body>
