create script and addTodo function

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         <p>Icons created by Freepik - Flaticon</p>
     </footer>
 
+    <!-- Script -->
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
