turn form autocomplete off

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <!-- Form section -->
     <section>
-        <form>
-            <input type="text" id="todo-input" placeholder="Add a ToDo" required>
+        <form autocomplete="off">
+            <input type="text" id="todo-input" placeholder="Add a ToDo">
             <button id="todo-btn" type="submit">
                 <img src="assets/images/add.png">
             </button>
