replace regular alert with sweetalert

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
     <script src="https://kit.fontawesome.com/d464e9b559.js" crossorigin="anonymous"></script>
     <!-- JavaScript -->
     <script src="assets/js/script.js"></script>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 
 </html>
