add margin and padding to elements

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <!-- ToDo List Section -->
     <section id="todo-container">
         <div id="todo-list">
-            <h2>ToDo's</h2>
+            <!-- <h2>ToDo</h2> -->
             <!-- new list items here -->
         </div>
 
         <div id="todo-done">
-            <h2>Completed ToDo's</h2>
+            <!-- <h2>Completed</h2> -->
             <!-- completed items moved here -->
         </div>
     </section>
