adjust CSS for better visualization

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </a>
             </li>
         </ul>
-        <p>Designed by Noemi Chis 2023</p>
+        <!-- <p>Designed by Noemi Chis 2023</p> -->
         <p>Icons made by <a href="https://www.freepik.com/" target="_blank"
                 aria-label="Check out Freepik page">Freepik</a> from <a href="https://www.flaticon.com/" target="_blank"
                 aria-label="Check out Flaticon page">Flaticon</a></p>
