add meta description to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="todo-list, to-do list, colorful to-do, rainbow, notes, organizer">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rainbow ToDo's</title>
 </head>
@@ -62,7 +63,7 @@
     <script src="https://kit.fontawesome.com/d464e9b559.js" crossorigin="anonymous"></script>
     <!-- JavaScript -->
     <script src="assets/js/script.js"></script>
-
+    <!-- Sweetalert script -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 
