--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A rainbow ToDo List">
     <meta name="keywords" content="todo-list, to-do list, colorful to-do, rainbow, notes, organizer">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rainbow ToDo's</title>
