add function for empty state message

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Header -->
     <header>
-        <h1>Rainbow ToDo's</h1>
+        <h1><span id="username"></span>Rainbow ToDo's</h1>
     </header>
 
     <!-- Form section -->
@@ -30,6 +30,7 @@
 
     <!-- ToDo List Section -->
     <section id="todo-container">
+        <span id="empty">No ToDo's</span>
         <div id="todo-list">
             <!-- <h2>ToDo</h2> -->
             <!-- new list items here -->
