add CSS for empty state and new icons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <!-- Header -->
     <header>
-        <h1><span id="username"></span>Rainbow ToDo's</h1>
+        <img src="assets/images/rainbow.png" alt="rainbow icon" id="rainbow">
+        <h1>Rainbow ToDo's</h1>
     </header>
 
     <!-- Form section -->
@@ -30,7 +31,10 @@
 
     <!-- ToDo List Section -->
     <section id="todo-container">
-        <span id="empty">No ToDo's</span>
+        <div id="empty">
+            <img src="assets/images/flower.png" alt="colorful flower icon">
+            <p>Your list is empty, let's add some tasks..</p>
+        </div>
         <div id="todo-list">
             <!-- <h2>ToDo</h2> -->
             <!-- new list items here -->
