add script for date and time

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             <!-- <h2>Completed</h2> -->
             <!-- completed items moved here -->
         </div>
+        <div id="clock">
+        </div>
     </section>
 
     <!-- Footer -->
