add timestamp to todo tasks

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         </form>
     </div>
 
+    <div id="clock"></div>
+
     <!-- ToDo List Section -->
     <section id="todo-container">
         <div id="empty">
@@ -44,9 +46,10 @@
             <!-- <h2>Completed</h2> -->
             <!-- completed items moved here -->
         </div>
-        <div id="clock">
-        </div>
+
     </section>
+
+
 
     <!-- Footer -->
     <footer>
