adjust on CSS, remove unused constant

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <!-- Form section -->
-    <div>
+    <div id="form-div">
         <form autocomplete="off">
             <input type="text" id="todo-input" placeholder="Add a ToDo">
             <button id="todo-btn" type="submit">
@@ -39,12 +39,10 @@
             <p>Your list is empty, let's add some tasks..</p>
         </div>
         <div id="todo-list">
-            <!-- <h2>ToDo</h2> -->
             <!-- new list items here -->
         </div>
 
         <div id="todo-done">
-            <!-- <h2>Completed</h2> -->
             <!-- completed items moved here -->
         </div>
 
